Removed dead code and removed some dodgy code after findbugs analysis.